<resources>
    <string name="app_name">todo</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="high">high</string>
    <string name="low">low</string>
    <string name="medium">medium</string>
    <string name="none">none</string>
    <string name="today">today</string>
    <string name="close_button">close Button</string>
    <string name="hobby">hobby</string>
    <string name="add">add</string>
    <string name="add_button">add button</string>
    <string name="all">all</string>
    <string name="add_task_hint">meditate</string>
    <string name="floating_action_button_content_description">floating action button</string>
    <string name="tags">Tags</string>
    <string name="tag_visibility_note">tap on tags above to view tags</string>
    <string name="timer_name">tomato</string>
    <string name="default_time_in_timer">25:00</string>
    <string name="timer">timer</string>
    <string name="home">home</string>
    <string name="tagsTitle">tags</string>
</resources>