<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".HomeFragment">
<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/chipRecyclerView"-->
<!--        />-->


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbars="none"
        android:id="@+id/scrollView"
        >
        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            app:singleSelection="true"
            android:id="@+id/chip_group"
            app:selectionRequired="true"

            style="@style/Widget.MaterialComponents.Chip.Choice"
            >
            <com.google.android.material.chip.Chip
                android:id="@+id/allChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:checkable="true"
                android:textSize="18sp"
                android:checked="true"
                android:textColor="@color/black"
                app:checkedIcon="@drawable/dot"
                app:checkedIconTint="@color/SEC_700"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                />
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textSize="18sp"
                app:checkedIcon="@drawable/dot"
                android:textColor="@color/black"
                android:checkable="true"
                app:checkedIconTint="@color/SEC_700" />


        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/scrollView"
        android:id="@+id/recyclerView"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/SEC_700"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
        app:srcCompat="@drawable/add"
        android:foregroundTint="#616161"
        android:contentDescription="@string/floating_action_button_content_description" />
</RelativeLayout>