<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

<!--    <RelativeLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content">-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/profileImgCard"-->
<!--            android:padding="100dp"-->
<!--            android:background="@color/PRIMARY_700"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content">-->
<!--            <com.google.android.material.imageview.ShapeableImageView-->
<!--                android:id="@+id/profileImg"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@mipmap/ic_launcher"-->
<!--                app:shapeAppearance="@style/CornerCut"-->
<!--                />-->
<!--        </androidx.cardview.widget.CardView>-->

<!--        <com.google.android.material.chip.Chip-->
<!--            android:layout_below="@+id/profileImgCard"-->
<!--            android:text="Darshan"-->
<!--            android:layout_marginHorizontal="10dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:minHeight="65dp"-->
<!--            android:padding="10dp"-->
<!--            android:textColor="@color/white"-->
<!--            android:textAlignment="center"-->
<!--            android:textSize="24sp"-->
<!--            app:chipCornerRadius="10dp"-->
<!--            android:background="@drawable/text_background2"-->
<!--            app:chipBackgroundColor="@color/PRIMARY_700"-->
<!--            app:chipStrokeWidth="2dp"-->
<!--            />-->

<!--    </RelativeLayout>-->



    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:backgroundTint="@color/BG_100"
        android:paddingBottom="10dp"
        android:layout_margin="10dp"
        android:elevation="20dp"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <com.google.android.material.chip.Chip
                    android:id="@+id/tagsDisplayTitle"
                    android:text="@string/tags"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:minHeight="65dp"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    app:chipCornerRadius="10dp"
                    android:background="@drawable/text_background2"
                    app:chipBackgroundColor="@color/PRIMARY_700"
                    app:chipIconTint="@color/SEC_700"
                    app:chipIcon="@drawable/tag"
                    app:chipStrokeWidth="2dp"
                    app:iconStartPadding="10dp"
                    android:layout_toStartOf="@+id/addTagBtn"

                    />

                <ImageButton
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_height="wrap_content"
                    app:tint="@color/SEC_700"
                    android:padding="10dp"
                    android:textSize="24sp"
                    android:background="@drawable/text_background2"
                    android:text="@string/add"
                    android:src="@drawable/ic_baseline_add_24"
                    android:id="@+id/addTagBtn"
                    />
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tagsRecyclerView"
                />
            <TextView
                android:id="@+id/caution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="visible"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginBottom="10dp"
                android:text="@string/tag_visibility_note"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>