<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/BG_100"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

<!--        <ImageButton-->
<!--            android:id="@+id/closeIn"-->
<!--            android:layout_gravity="start|center_vertical"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_margin="10dp"-->
<!--            android:background="@drawable/add_btn_background"-->
<!--            android:src="@drawable/close"-->
<!--            app:tint="@color/black" />-->

<!--            <TextView-->
<!--                android:layout_gravity="end|center_vertical"-->
<!--                android:gravity="center_horizontal"-->
<!--                android:id="@+id/priorityText"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="10dp"-->
<!--                android:background="@drawable/text_background2"-->
<!--                android:paddingHorizontal="10dp"-->
<!--                android:paddingVertical="5dp"-->
<!--                android:text="@string/none"-->
<!--                android:textColor="@color/BG_900"-->
<!--                android:textSize="18sp" />-->


       <RelativeLayout
           android:id="@+id/topBtn"
           android:padding="0dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <ImageButton
               android:layout_alignParentStart="true"
               android:id="@+id/closeIn"
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:layout_margin="10dp"
               android:background="@drawable/add_btn_background"
               android:src="@drawable/close"
               app:tint="@color/black" />
           <RelativeLayout
               android:layout_alignParentEnd="true"
               android:layout_margin="10dp"
               android:layout_width="250dp"
               android:layout_height="40dp"
               android:background="@drawable/text_background2"
               android:orientation="horizontal"
               android:id="@+id/radioBtnAndText"
               android:layout_centerHorizontal="true"
               >

               <TextView
                   android:layout_alignParentStart="true"
                   android:id="@+id/priorityText"
                   android:layout_width="100dp"
                   android:layout_height="match_parent"
                   android:background="@drawable/text_background"
                   android:paddingHorizontal="10dp"
                   android:paddingVertical="5dp"
                   android:text="@string/none"
                   android:textColor="@color/BG_900"
                   android:gravity="center"
                   android:textSize="18sp" />

               <RadioGroup
                   android:id="@+id/radioBtnGroup"
                   android:layout_alignParentEnd="true"
                   android:layout_centerVertical="true"
                   android:layout_width="wrap_content"
                   android:layout_height="30dp"
                   android:layout_marginEnd="10dp"
                   android:orientation="horizontal"
                   >
                   <RadioButton
                       android:padding="0dp"
                       android:layout_gravity="center"
                       android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:buttonTint="@color/high"
                       android:id="@+id/highRadioBtn"
                       />
                   <RadioButton
                       android:gravity="center"
                       android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:buttonTint="@color/mid"
                       android:id="@+id/mediumRadioBtn"
                       />
                   <RadioButton
                       android:gravity="center"
                       android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:buttonTint="@color/low"
                       android:id="@+id/lowRadioBtn"
                       />
                   <RadioButton
                       android:gravity="center"
                       android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:buttonTint="@color/no"
                       android:id="@+id/noRadioBtn"
                       android:checked="true"
                       />
               </RadioGroup>

           </RelativeLayout>
       </RelativeLayout>



        <EditText
            android:id="@+id/taskIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/BG_900"
            android:layout_below="@+id/topBtn"
            android:inputType="text"
            android:hint="@string/add_task_hint"
            android:textColorHint="@color/PRIMARY_500"
            android:textSize="24sp"
            android:padding="10dp"
            android:background="@drawable/text_background2"
            android:layout_marginHorizontal="10dp"
            />

<!--        <ImageButton-->
<!--            android:id="@+id/dateIn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_below="@+id/taskIn"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:background="@drawable/text_background2"-->
<!--            android:padding="10dp"-->
<!--            android:src="@drawable/calendar" />-->

        <com.google.android.material.chip.Chip
            android:id="@+id/dateIn"
            android:layout_below="@+id/taskIn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:minHeight="65dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="24sp"
            app:chipCornerRadius="10dp"
            android:background="@drawable/text_background2"
            app:chipBackgroundColor="@color/PRIMARY_700"
            app:chipIconTint="@color/SEC_700"
            app:chipIcon="@drawable/calendar"
            app:chipStrokeWidth="2dp"
            app:iconStartPadding="10dp" />


        <Spinner
            android:layout_below="@+id/dateIn"
            android:background="@drawable/text_background2"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:padding="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tagIn"
            />




        <ImageButton
            android:id="@+id/addBtnIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tagIn"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="10dp"
            app:tint="@color/SEC_700"
            android:padding="10dp"
            android:textSize="24sp"
            android:background="@drawable/text_background2"
            android:text="@string/add"
            android:src="@drawable/ic_baseline_add_24"
            />


    </RelativeLayout>

</androidx.cardview.widget.CardView>